force-app/main/default/objects/Shoppingcart__c/Shoppingcart__c.object-meta.xml
<CustomObject>
    <label>ShoppingCart</label>
    <nameField>
        <label>Shoppingcart Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>