force-app/main/default/objects/Shoppingcart__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>ShoppingCart (Category)</relationshipLabel>
    <relationshipName>ShoppingCart2</relationshipName>
    <type>Lookup</type>
</CustomField>