force-app/main/default/objects/Shoppingcart__c/fields/Charger0__c.field-meta.xml
<CustomField>
    <fullName>Charger0__c</fullName>
    <label>Charger</label>
    <length>100</length>
    <type>Text</type>
</CustomField>