force-app/main/default/objects/Shoppingcart__c/fields/Charger__c.field-meta.xml
<CustomField>
    <fullName>Charger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charger</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>ShoppingCart (Charger)</relationshipLabel>
    <relationshipName>ShoppingCart3</relationshipName>
    <type>Lookup</type>
</CustomField>