force-app/main/default/objects/Shoppingcart__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Description</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>ShoppingCart (Description)</relationshipLabel>
    <relationshipName>ShoppingCart1</relationshipName>
    <type>Lookup</type>
</CustomField>