force-app/main/default/objects/Shoppingcart__c/fields/Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>Picture_URL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Picture URL</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>ShoppingCart (Picture URL)</relationshipLabel>
    <relationshipName>ShoppingCart4</relationshipName>
    <type>Lookup</type>
</CustomField>