force-app/main/default/objects/Shoppingcart__c/fields/PictureURL__c.field-meta.xml
<CustomField>
    <fullName>PictureURL__c</fullName>
    <label>PictureURL</label>
    <type>Url</type>
</CustomField>