force-app/main/default/objects/Shoppingcart__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>