force-app/main/default/objects/Shoppingcart__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>ShoppingCart</relationshipLabel>
    <relationshipName>ShoppingCart</relationshipName>
    <type>Lookup</type>
</CustomField>